# rust-doh-proxy

./: Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs
config/: apu2-config.json  config.json
src/: doh.rs  main.rs  proxy.rs
src/doh/: cache.rs  client.rs  config.rs  localdomain.rs  metrics.rs  proxy.rs  request_key.rs  tcpserver.rs  udpserver.rs  utils.rs
systemd/: rust-dns.service  rust-doh-proxy.service
