[package]
name = "rust-dns"
version = "0.1.0"
authors = ["Aaron Riekenberg <aaron.riekenberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
env_logger = "0.7"
futures = "0.3"
hyper = "0.13"
hyper-tls = "0.4"
log = "0.4"
lru = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
trust-dns-proto = "0.8"
