[package]
name = "rust-doh-proxy"
version = "0.1.0"
authors = ["Aaron Riekenberg <aaron.riekenberg@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
env_logger = "0.7"
log = "0.4"
lru = { version = "0.4", default-features = false }
reqwest = { version = "0.10", features = ["rustls-tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
trust-dns-proto = "0.18"

[build-dependencies]
vergen = "3"
